--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>The first cousera page</title>
 </head>
 <body>
-<h1>Hello world</h1>
+<h1>Hello world. It's a great course</h1>
 </body>
 </html>
